# spark-sandbox-test-for-ed

./: .gitignore  README.md  build.sh  pyproject.toml  submit-local-batch-job.ps1  synapse-package-upload.ps1
.devcontainer/: Dockerfile  devcontainer.json
data/: MyFile.parquet
sample_entrypoints/: file.py  notebook.ipynb
src/samplepackage/tables/: __init__.py  people.py  scores.py
src/samplepackage/utils/: __init__.py  null_safe_join.py  table_ops.py
tests/: spark_startup.py  test_sample.py
